--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@graphql-yoga/common": "^2.12.12",
     "@ngneat/falso": "^6.1.0",
-    "@prisma/client": "^4.6.1"
+    "@prisma/client": "^4.6.1",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
     "@cloudflare/wrangler": "^1.20.0",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^18.11.9",
     "ts-loader": "8.3.0",
     "webpack": "^5.75.0",
